--- a/Notes/notes.css
+++ b/Notes/notes.css
@@ -20,7 +20,7 @@ body {
     border-radius: 5px;
   }
   .sidebar a:hover {
-    background-color: #555;
+    background-color: #d07d7d;
   }
   .sidebar i {
     margin-right: 10px;
